--- a/css/page2.css
+++ b/css/page2.css
@@ -2,6 +2,7 @@ p{
 	text-align: justify;
 	text-indent: 15px;
 	font-family: arial;
-	font-size: 30pt;
+	font-size: 20pt;
 	color: red;
+	font-weight: bold;
 }
